# Onyx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Onyx.sln  README.MD  SE.sln  build_win.bat  vcpkg.json
Editor/: CMakeLists.txt  Editor.vcxproj  Editor.vcxproj.filters  EditorApp.cpp  Main.cpp  Viewport.cpp  Viewport.h
MMOGame/: CMakeLists.txt  Main.cpp  README.md
MMOGame/Benchmarks/: CMakeLists.txt  OmdlVsFbx.cpp
MMOGame/Client/: CMakeLists.txt
MMOGame/Client/Source/: GameClient.cpp  GameClient.h  Main.cpp
MMOGame/Client/Source/Rendering/: GameRenderer.cpp  GameRenderer.h  IsometricCamera.cpp  IsometricCamera.h
MMOGame/Client/Source/Terrain/: ClientTerrainSystem.cpp  ClientTerrainSystem.h
MMOGame/Client/Source/UI/: InGameHUD.cpp  InGameHUD.h
MMOGame/Data/: maps.json
MMOGame/Database/: schema.sql
MMOGame/Database/migrations/: 0001_baseline.sql  0002_add_creature_npc_gameobject.sql  0003_seed_races_classes.sql  0004_add_instance_script.sql
MMOGame/Editor/: CMakeLists.txt  map.json
MMOGame/Editor/Source/: Chunk.cpp  Chunk.h  EditorDefines.h  EditorLayer.cpp  EditorLayer.h  FileDialog.cpp  FileDialog.h  Main.cpp  TileMap.cpp  TileMap.h  TileMapRenderer.cpp  TileMapRenderer.h  Tileset.cpp  Tileset.h
MMOGame/Editor/Source/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  EditorContext.h  EditorPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  PanelManager.cpp  PanelManager.h  PropertiesPanel.cpp  PropertiesPanel.h  StatisticsPanel.cpp  StatisticsPanel.h  TilesetPanel.cpp  TilesetPanel.h  ViewportPanel.cpp  ViewportPanel.h
MMOGame/Editor/assets/shaders/: grid.frag  grid.vert  tile_cached.frag  tile_cached.vert  tile_instanced.vert
MMOGame/Editor3D/: CMakeLists.txt
MMOGame/Editor3D/Source/: Editor3DLayer.cpp  Editor3DLayer.h  Main.cpp
MMOGame/Editor3D/Source/Commands/: EditorCommand.cpp  EditorCommand.h
MMOGame/Editor3D/Source/Data/: RaceClassRegistry.cpp  RaceClassRegistry.h
MMOGame/Editor3D/Source/Export/: MigrationSqlWriter.cpp  MigrationSqlWriter.h
MMOGame/Editor3D/Source/Gizmo/: TransformGizmo.cpp  TransformGizmo.h
MMOGame/Editor3D/Source/Map/: EditorMapRegistry.cpp  EditorMapRegistry.h  MapBrowserDialog.cpp  MapBrowserDialog.h
MMOGame/Editor3D/Source/Navigation/: NavMeshBakeService.cpp  NavMeshBakeService.h  NavMeshBuilder.cpp  NavMeshBuilder.h  NavMeshDebugView.cpp  NavMeshDebugView.h
MMOGame/Editor3D/Source/Panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  EditorPanel.h  FileDialog.cpp  FileDialog.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  LightingPanel.cpp  LightingPanel.h  MaterialEditorPanel.cpp  MaterialEditorPanel.h  PanelManager.h  StatisticsPanel.cpp  StatisticsPanel.h  TerrainPanel.cpp  TerrainPanel.h  ToolbarPanel.cpp  ToolbarPanel.h  UIEditorPanel.cpp  UIEditorPanel.h  ViewportPanel.cpp  ViewportPanel.h
MMOGame/Editor3D/Source/Rendering/: EditorVisuals.h
MMOGame/Editor3D/Source/Runtime/: LocalRunSession.cpp  LocalRunSession.h  Subprocess.cpp  Subprocess.h
MMOGame/Editor3D/Source/Settings/: EditorPreferences.cpp  EditorPreferences.h
MMOGame/Editor3D/Source/Terrain/: ChunkLight.h  EditorTerrainSystem.cpp  EditorTerrainSystem.h  MaterialSerializer.cpp  MaterialSerializer.h  TerrainChunk.cpp  TerrainChunk.h  TerrainMaterial.cpp  TerrainMaterial.h  TerrainMaterialLibrary.cpp  TerrainMaterialLibrary.h
MMOGame/Editor3D/Source/World/: EditorWorld.cpp  EditorWorld.h  EditorWorldSystem.cpp  EditorWorldSystem.h  WorldChunk.cpp  WorldChunk.h
MMOGame/Editor3D/assets/shaders/: basic3d.vert  gizmo.frag  gizmo.vert  infinite_grid.frag  infinite_grid.vert  infinite_grid_test.frag  model.frag  model.vert  navmesh_overlay.frag  navmesh_overlay.vert  picking.frag  picking.vert  picking_billboard.frag  picking_billboard.vert  shadow_depth.frag  shadow_depth.vert  skinned.vert  terrain.frag  terrain.vert
MMOGame/LoginServer/: CMakeLists.txt
MMOGame/LoginServer/Source/: Database.cpp  Database.h  LoginServer.cpp  LoginServer.h  Main.cpp
MMOGame/Shared/: CMakeLists.txt
MMOGame/Shared/Source/Data/: GameDataStore.cpp  GameDataStore.h
MMOGame/Shared/Source/Database/: Database.cpp  Database.h  MigrationRunner.cpp  MigrationRunner.h
MMOGame/Shared/Source/Items/: Items.cpp  Items.h
MMOGame/Shared/Source/Map/: MapRegistry.cpp  MapRegistry.h
MMOGame/WorldServer/: CMakeLists.txt
MMOGame/WorldServer/Source/: Main.cpp  WorldServer.cpp  WorldServer.h
MMOGame/assets/shaders/: basic.frag  basic.vert  grid.frag  grid.vert  tile.frag  tile.vert
Onyx/: CMakeLists.txt  Onyx.vcxproj
Onyx/Assets/Shaders/: model.frag  model_batched.vert  shadow_depth_batched.vert  shadow_depth_skinned_batched.vert  skinned_batched.vert
Onyx/Source/: Onyx.h  pch.h
Onyx/Source/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  Platform.cpp  Platform.h
Onyx/Source/Graphics/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  AssetHandle.h  AssetManager.cpp  AssetManager.h  Attachment.cpp  Attachment.h  Buffers.cpp  Buffers.h  Camera.cpp  Camera.h  CascadedShadowMap.cpp  CascadedShadowMap.h  Framebuffer.cpp  Framebuffer.h  Frustum.cpp  Frustum.h  IRenderable.h  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ParticleSystem.cpp  ParticleSystem.h  RenderCommand.cpp  RenderCommand.h  RenderTarget.cpp  RenderTarget.h  Renderer2D.cpp  Renderer2D.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  (+16 more)
Onyx/Source/Maths/: Frustum.cpp  Frustum.h  Functions.cpp  Functions.h  Maths.h  Vector2D.cpp  Vector2D.h  Vector3.cpp  Vector3.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
Onyx/Source/Networking/: Client.h  Connection.h  Message.h
Onyx/Source/Onyx/: Core.h
Onyx/Source/Physics/: Precision.h
Onyx/Source/UI/: Color.h  DragDrop.cpp  DragDrop.h  InputEvent.h  Layout.h  Manager.cpp  Manager.h  Rect2D.h  ScreenStack.cpp  ScreenStack.h  UILayer.cpp  UILayer.h  Widget.cpp  Widget.h  WidgetTree.cpp  WidgetTree.h
SE/: SE.vcxproj  (+3 more)
(+327 files in other folders)
